lib/asciidoctor/inline_parser/asciidoctor_link_grammar.treetop
grammar AsciidoctorLinkGrammar

  rule explicit_link
    'link:' uri_scheme uri_path_explicit link_attrs? <Link>
  end

  rule explicit_link_protected
    'link:++' uri_scheme uri_path_protected '++' link_attrs? <Link>
  end

  rule uri_path_explicit
    [^\[]+ <LinkPath>
  end

  rule uri_path_protected
    [^+]+ <LinkPath>
  end

  rule implicit_link
    uri_scheme uri_path link_attrs? <Link>
  end

  rule uri_scheme
    ( 'https' / 'http' / 'file' / 'ftp' / 'irc' ) '://' <LinkScheme>
  end

  rule uri_path
    ('.' (!' ' .) / [^ \.\[])+ <LinkPath>
  end

  rule link_attrs
    '[' link_attrs_content ']' <LinkAttributes>
  end

  rule link_attrs_content
    (
      link_attr_role_protected / link_attr_role_unprotected /
      link_attr_window_protected /  link_attr_text_protected /
      ',' / ' ' /
      link_attr_text_unprotected / link_attr_window_unprotected
    )+ <LinkAttributesContent>
  end

  rule link_attr_text_unprotected
    [^,\]]+ <LinkText>
  end

  rule link_attr_text_protected
    '"' link_text_protected '"' <LinkTextProtected>
  end

  rule link_text_protected
    [^"]+ <LinkText>
  end

  rule link_attr_role_unprotected
    'role=' [^,\]]+ <LinkRole>
  end

  rule link_attr_role_protected
    'role="' [^"]+ '"' <LinkRole>
  end

  rule link_attr_window_unprotected
    'window=' [^,\]]+ <LinkWindow>
  end

  rule link_attr_window_protected
    'window="' [^"]+ '"' <LinkWindow>
  end
end
